@@ -14,4 +14,5 @@ SETUP_CHECK( if1u, if1_available )
 SETUP_CHECK( divide_late, settings_current.divide_enabled )
 SETUP_CHECK( opus, opus_available )
 SETUP_CHECK( spectranet_unpage, spectranet_available )
+SETUP_CHECK( z80_halted, z80.halted )
 SETUP_NEXT( end_opcode )
